--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@
     color: #4d4d4d;
 }
 
-.nav_ul li a:hover{
+.nav_ul li a:hover {
     color: #e55473;
 }
 
@@ -93,12 +93,83 @@
     background-position: center;
     background-repeat: no-repeat;
 }
- 
-.banr_head{
+
+.banr_head {
     font-size: 60px;
 }
 
-.banr_pra{
-    margin:30px 0;
+.banr_pra {
+    margin: 30px 0;
     font-size: 18px;
 }
+
+
+/* -- --------Feature Section Design Start---------- -- */
+
+#feature_secs {
+    width: 100%;
+    /* height: 100vh; */
+    text-align: center;
+    margin: 100px 0;
+}
+
+.feature_head {
+    font-size: 40px;
+    margin-block-end: 24px;
+}
+
+.feature-pra {
+    font-size: 18px;
+    margin-block-end: 50px;
+}
+
+.feature-container {
+    display: flex;
+    flex-direction: row;
+    width: 80%;
+    height: 400px;
+    /* background-color: #e55473; */
+    margin: 0 auto;
+    justify-content: space-around;
+}
+
+.feature-card {
+    height: 320px;
+    width: 300px;
+    /* background-color: #4d4d4d; */
+    border-top-right-radius: 50%;
+    border-top-left-radius: 50%;
+}
+
+.iteam2{
+    background-color: #ffdee5;
+}
+.iteam1{
+    background-color: #caddab;
+}
+.iteam3{
+    background-color: #e0c409;
+}
+
+.flower-iteam2{
+    width: 200px;
+    margin: 15px;
+}
+.flower-iteam1{
+    width: 218px;
+    margin: 15px;
+}
+
+.flower-iteam3{
+    width: 190px;
+    margin: 15px;
+}
+
+
+
+.feature-title{
+    text-decoration: underline;
+    font-size: 24px;
+}
+
+/* -- --------Feature Section Design end---------- -- */
